@@ -89,6 +89,17 @@ $fields['updateprofile.profile'] =& $profile;
 $fields['updateprofile.usernameChanged'] = $usernameChanged;
 $login->posthooks->loadMultiple($postHooks,$fields);
 
+/* process hooks */
+if (!empty($login->posthooks->errors)) {
+    $errors = array();
+    foreach ($login->posthooks->errors as $key => $error) {
+        $errors[$key] = str_replace('[[+error]]',$error,$errTpl);
+    }
+    $modx->toPlaceholders($errors,'error');
+
+    $errorMsg = $login->posthooks->getErrorMessage();
+    $modx->toPlaceholder('message',$errorMsg,'error');
+}
 
 /* return success */
 $successMsg = $modx->getOption('successMsg',$scriptProperties,$modx->lexicon('login.profile_updated'));
